--- a/get_coordinates.html
+++ b/get_coordinates.html
@@ -14,7 +14,7 @@
         function showPosition(position) {
             const latitude = position.coords.latitude;
             const longitude = position.coords.longitude;
-            const formLink = `https://docs.google.com/forms/d/e/1FAIpQLSephqob10SLB0gl0ksJwYkwkinuECpISN_8hJWanrYnevvP0g/viewform?usp=pp_url&entry.937312516=test&entry.548272433=teste&entry.1153802124=etse&entry.1915857707=testa&entry.2070352084=${latitude}&entry.266997233=${longitude}`;
+            const formLink = `https://docs.google.com/forms/d/e/1FAIpQLSephqob10SLB0gl0ksJwYkwkinuECpISN_8hJWanrYnevvP0g/viewform?usp=pp_url&entry.2070352084=${latitude}&entry.266997233=${longitude}`;
             window.location.href = formLink;
         }
     </script>
