--- a/get_coordinates.html
+++ b/get_coordinates.html
@@ -14,9 +14,10 @@
         function showPosition(position) {
             const latitude = position.coords.latitude;
             const longitude = position.coords.longitude;
+            const coordinates = `${latitude},${longitude}`;
 
-            // Google Form link with only latitude and longitude pre-filled
-            const formLink = `https://docs.google.com/forms/d/e/1FAIpQLSephqob10SLB0gl0ksJwYkwkinuECpISN_8hJWanrYnevvP0g/viewform?usp=pp_url&entry.2070352084=${latitude}&entry.266997233=${longitude}`;
+            // Google Form link with combined coordinates pre-filled
+            const formLink = `https://docs.google.com/forms/d/e/1FAIpQLSephqob10SLB0gl0ksJwYkwkinuECpISN_8hJWanrYnevvP0g/viewform?usp=pp_url&entry.1158048078=${coordinates}`;
             window.location.href = formLink;
         }
     </script>
